# server/app/Models/Search.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Search extends Model
+{
+    use HasFactory;
+    protected $fillable = ['users_id','query','results','timestamp'];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
